# tempora

./: .gitignore  CMakeLists.txt  clib.json  license.md  makefile  readme.md
docs/: Doxyfile
docs/html/: all_8h.html  all_8h_source.html  common_8h.html  common_8h.js  common_8h_source.html  dir_5b8333022977a201e663fb63f3865d5c.html  dir_5b8333022977a201e663fb63f3865d5c.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_bfccd401955b95cf8c75461437045ac0.html  dir_bfccd401955b95cf8c75461437045ac0.js  dir_dc45acfd962f04d457d421ea75fbc131.html  dir_dc45acfd962f04d457d421ea75fbc131.js  files.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  index.html  navtreedata.js  navtreeindex0.js  read_8h.html  read_8h.js  read_8h_source.html  specific_8c.html  specific_8h.html  specific_8h.js  specific_8h_source.html
docs/html/search/: all_4.js  defines_0.js  enums_0.js  enumvalues_0.js  files_0.js  files_3.js  functions_0.js  searchdata.js  typedefs_0.js
etc/: analyze-include-dirs.list  analyze-source-files.list
examples/: read.c
inc/tempora/: all.h  common.h  read.h  specific.h
src/tempora/: common.c  read.c  specific.c
src/tempora/nix/: directory.c  env.c
src/tempora/win/: directory.c  env.c
